--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@sendgrid/mail": "^8.1.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "firebase": "^10.14.1",
+    "firebase-admin": "^12.6.0",
     "framer-motion": "^11.9.0",
     "lucide-react": "^0.447.0",
     "react": "^18.3.1",
